# nsimd

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTE.md  CONTRIBUTING.md  DOC.md  LICENSE  README.md  api.html  api_.html  api_Abs.html  api_All.html  api_Any.html  api_Atan2.html  api_Atan2d.html  api_Atan2pi.html  api_Ceil.html  api_Cvt.html  api_Downcvt.html  api_Eq.html  api_Erfc.html  api_Erfcx.html  api_Exprecneg.html  api_Exprecnegc.html  api_Expx2.html  api_Floor.html  api_Fma.html  api_Fms.html  api_Fnma.html  api_Fnms.html  api_Ge.html  api_Gt.html  api_If-else1.html  api_Le.html  api_Len.html  api_Load2u.html  api_Load3u.html  api_Loadu.html  api_Log1p.html  (+433 more)
assets/: polyfill.min.js
benches/: benches.hpp
cmake/: CompilerFlags.cmake  FindMIPP.cmake  FindMPFR.cmake  FindSleef.cmake  Findbenchmark.cmake  SIMD.cmake
doc/: DocBasicArithmetic.json  DocBitsOperators.json  DocComparison.json  DocConversion.json  DocExpLog.json  DocHyper.json  DocLoadStore.json  DocLogicalOperators.json  DocMisc.json  DocRounding.json  DocShuffle.json  DocTrigo.json  Makefile.nix  Makefile.win  abs.json  acos.json  acosd.json  acosh.json  acospi.json  acot.json  acotd.json  acoth.json  acotpi.json  acsc.json  acscd.json  acsch.json  acscpi.json  add.json  addv.json  all.json  andb.json  andl.json  andnotb.json  andnotl.json  any.json  asec.json  asecd.json  asech.json  asecpi.json  asin.json  (+132 more)
doc/html/assets/: cpp.min.js
doc/html/img/: 640px-Pavlovsk_Railing_of_bridge_Yellow_palace_Winter.pgm
doc/markdown/: api.md  api_abs.md  api_acos.md  api_acosd.md  api_acosh.md  api_acospi.md  api_acot.md  api_acotd.md  api_acoth.md  api_acotpi.md  api_acsc.md  api_acscd.md  api_acsch.md  api_acscpi.md  api_add.md  api_addv.md  api_all.md  api_andb.md  api_andl.md  api_andnotb.md  api_andnotl.md  api_any.md  api_asec.md  api_asecd.md  api_asech.md  api_asecpi.md  api_asin.md  api_asind.md  api_asinh.md  api_asinpi.md  api_atan.md  api_atan2.md  api_atan2d.md  api_atan2pi.md  api_atand.md  api_atanh.md  api_atanpi.md  api_ceil.md  api_cos.md  api_cosd.md  (+138 more)
doc/markdown/modules/: .gitignore  modules.md
doc/markdown/modules/fixed_point/: overview.md
doc/src/: aos_soa.cpp  dot_product.cpp  hello_world.c  hello_world.cpp  julia_set.cpp  loop.cpp  mandelbrot_set.cpp  module_fixed_point_example.cpp  nbody.cpp  neural_network.cpp  nsimd.sh  pack.cpp  runtime_simd.cpp  sin_cos.cpp  threshold.cpp
doc_and_tutorials/: Makefile
doc_and_tutorials/doc/: api.md  header.html  index.md  license.md  tutorials_advanced_julia_set.md  tutorials_basic_mathematical_functions.md  tutorials_basic_memory_alignment.md  tutorials_basic_pack.md  tutorials_intermediate_if_else.md
docker/aarch64/: Dockerfile  run.sh
docker/armv7/: Dockerfile  run.sh
docker/ppc/: Dockerfile  run.sh
egg/: #common.py#  .#common.py  .platform_arm.py.swp  .platform_cpu.py.swp  __init__.py  common.py  cuda.py  disabled_plateform_ppc.py  flycheck_platform_arm.py  gen_adv_c_api.py  gen_adv_cxx_api.py  gen_advanced_api.py  gen_archis.py  gen_base_apis.py  gen_benches.py  gen_doc.py  gen_friendly_but_not_optimized.py  gen_module_tet1d.py  gen_modules.py  gen_scalar_utilities.py  gen_src.py  gen_tests.py  gen_tests_fp.py  gen_ulps.py  get_sleef_code.py  hatch.py  oneapi.py  operators.py  platform_arm.py  platform_cpu.py  platform_ppc.py  platform_riscv.py  platform_wasm.py  platform_x86.py  rocm.py  scalar.py  sycl.py  ulp.json  x86_load_store_deg234.py
egg/experiments/: gen_sleef_operators.py  round-ppc.c  upcvt-sve.c
egg/modules/: gen_tests_fp.py  hatch.py
egg/modules/convolution/: Makefile  dispatcher.py  gen_api.py  gen_kernels.py  gen_src.py  gen_tests.py  hatch.py  src_templates.py
egg/modules/fixed_point/: gen_doc.py  gen_tests.py  hatch.py  operators.py
egg/modules/memory_management/: hatch.py
egg/modules/rand/: hatch.py
egg/modules/rand123/: hatch.py
egg/modules/random/: hatch.py
egg/modules/spmd/: hatch.py
egg/modules/tet1d/: disabled_hatch.py  hatch.py
examples/: tutorial.cpp
include/nsimd/: c_adv_api.h  cxx_adv_api.hpp  cxx_adv_api_aliases.hpp  nsimd-all.h  nsimd-all.hpp  nsimd.h
include/nsimd/modules/: .clang-format  fixed_point.hpp  gen_wrappers.py  memory_management.hpp  spmd.hpp  tet1d.hpp
include/nsimd/modules/fixed_point/: README.md  abs.hpp  add.hpp  bit_printer.hpp  bitwise_and.hpp  bitwise_nor.hpp  bitwise_not.hpp  bitwise_or.hpp  bitwise_xor.hpp  ceil.hpp  constants.hpp  (+31 more)
scripts/: FindNSIMD.cmake  aarch64-linux-gnu-clang++.sh  aarch64-linux-gnu-clang.sh  build-tests.bat  build-tests.sh  build.bat  build.sh  ci-clang.txt  ci-output.sh  ci-scale.txt  ci-test.txt  ci.sh  compile-gmp-mpfr-for-wasm.sh  gen_github_doc.sh  hipcc.sh  init-benches-deps.sh  local-ci-rerun.ini  local-ci.ini  local-ci.sh  myemscripten++.sh  myemscripten.sh  one-liner.c  powerpc64le-linux-gnu-clang++.sh  powerpc64le-linux-gnu-clang.sh  setup.bat  setup.sh  travis-windows-cmake.bat  travis-windows-env.bat  travis-windows.bat  travis-windows.ps1  windows-env.bat
src/: fp16.cpp  gpu.cpp  helperavx.h  helperavx2.h  helperavx512f.h  helpersse2.h  memory.cpp  misc.h  rename.h  renameadvsimd.h  renameavx.h  renameavx2.h  renameavx512f.h  renameneon32.h  renamesse2.h  renamesse4.h  renamesve.h  renamevsx.h  sleefsimddp.c  sleefsimddp_emulation.c  sleefsimdsp.c  sleefsimdsp_emulation.c  ufp.cpp  ulps.cpp
tests/: CMakeLists.txt.sh  FindNSIMD.cmake.sh  allocator.cpp  allocator.cu  assign_arith.cpp  booleans.cpp  c11_vec.c  complex.cpp  cxx_adv_api_aliases.cpp  fp16.c  fp16.prec11.c  get_pack.cpp  memory.cpp  memory.prec11.c  nsimd-all.cpp  nsimd.cpp  nsimd.prec11.c  operator_vector_scalar.cpp  scoped_aligned_mem.cpp  shifts.cpp  templated_loads_stores.cpp  tests_helpers.hpp  to_pack.cpp  to_pack_interleave.cpp  ufp.cpp
tests/modules/: common.hpp  tet1d.cpp
tests/modules/fixed_point/: .gitignore  Makefile  fixed_point  fixed_point.cpp
tests/modules/rand/: reference.hpp
tests/modules/random/: reference.hpp
tests/modules/spmd/: common.hpp  spmd.cpp
tests/modules/tet1d/: common.hpp  copy.cpp  tet1d.cpp
(+79 files in other folders)
